[package]
name = "ioracle-ui"
version = "0.1.0"
authors = ["Denis K. <konsistentsi@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
askama = "0.10"
